--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 .container {
     position: relative;
     width: 400px;
-    height: 105px;
+    height: 605px;
     background: #fff;
     padding: 28px 32px;
     overflow: hidden;
@@ -32,5 +32,67 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.search-box input {
+    color: #06283d;
+    width: 80%;
+    font-size: 24px;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding-left: 32px;
+}
+
+.search-box input::placeholder{
+    font-size: 20px;
+    font-weight: 500;
+    color: #06283d;
+    text-transform: capitalize;
+}
+
+.search-box button{
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    color: #06283d;
+    background: #dff6ff;
+    border-radius: 50%;
+    font-size: 22px;
+    transition: 0.4s ease;
+}
+
+.search-box button:hover {
+    color: #fff;
+    background: #06283d;
+}
+
+.search-box i {
+    position: absolute;
+    color: #06283d;
+    font-size: 28px;
+}
+
+.weather-box {
+    text-align: center;
+}
+
+.weather-box img {
+    width: 60%;
+    margin-top: 30px;    
+}
+
+.weather-box .temperature {
+    position: relative;
+    color: #06283d;
+    font-size: 4rem;
+    font-weight: 800;
+    margin-top: 30px;
+    margin-left: -16px;
+}
+
+.weather-box .temperature span {
+    position: absolute;
+    margin-left: 4px;
+    font-size: 1.5rem;
 }
 
